src/opt/tests/snapshots/redundant__across_conditional_breaks_read.snap
---
created: "2019-04-07T06:57:00.694792700Z"
creator: insta@0.7.1
source: src/opt/tests/redundant.rs
expression: "\n    let f;\n    while (foo) {\n        f += 1;\n        if (bar) {\n            break;\n        }\n        f; // forward\n    }\n"
---
_ini = <void>
f <= _ini
<loop>:
    _whl = <global foo>
    <if> _whl:
        <empty>
    <else>:
        <break>
    _lhs = *f
    _rhs = 1
    _val = _lhs + _rhs
    f <- _val
    <dead> = _val
    _iff = <global bar>
    <if> _iff:
        <break>
    <else>:
        <empty>
    <dead> = _val
