src/opt/tests/snapshots/redundant__basic_write_to_read.snap
---
created: "2019-04-04T19:26:26.200097Z"
creator: insta@0.7.1
source: src/opt/tests/redundant.rs
expression: "\n    let something = 1;\n    foo();\n    something = x;\n    let y = something;\n"
---
_ini = 1
something <= _ini
_fun = <global foo>
<dead> = _fun()
_val = <global x>
something <- _val
<dead> = _val
_ini$1 = _val
y <= _ini$1
