src/opt/tests/snapshots/redundant__basic_write_to_write.snap
---
created: "2019-04-03T06:38:34.531739800Z"
creator: insta@0.7.1
source: src/opt/tests/redundant.rs
expression: "\n    let something = 1;\n    foo();\n    something = x;\n    something = y;\n"
---
_ini = 1
something :- _ini
_fun = <global foo>
<dead> = _fun()
_val = <global x>
<dead> = _val
_val$1 = <global y>
something <- _val$1
<dead> = _val$1
