src/opt/tests/snapshots/redundant__many_writes.snap
---
created: "2019-04-03T06:38:34.531739800Z"
creator: insta@0.7.1
source: src/opt/tests/redundant.rs
expression: "\n    let foo = 1;\n    foo = 2;\n    foo = 3;\n    foo = 4;\n    foo = 5;\n"
---
<dead> = 1
_val = 2
<dead> = _val
_val$1 = 3
<dead> = _val$1
_val$2 = 4
<dead> = _val$2
_val$3 = 5
foo :- _val$3
<dead> = _val$3
